Migrated tests from JUnit 4 to JUnit 5 : Actual migration [MANDATORY]